set(SOURCES FX4Splitter.cpp
FX7Segment.cpp
FX885910Codec.cpp
FX885911Codec.cpp
FX885913Codec.cpp
FX885914Codec.cpp
FX885915Codec.cpp
FX885916Codec.cpp
FX88591Codec.cpp
FX88592Codec.cpp
FX88593Codec.cpp
FX88594Codec.cpp
FX88595Codec.cpp
FX88596Codec.cpp
FX88597Codec.cpp
FX88598Codec.cpp
FX88599Codec.cpp
FXAccelTable.cpp
FXApp.cpp
FXArray.cpp
FXArrowButton.cpp
fxascii.cpp
FXAtomic.cpp
FXAutoThreadStorageKey.cpp
FXBarrier.cpp
fxbase64.cpp
FXBitmap.cpp
FXBitmapFrame.cpp
FXBitmapView.cpp
FXBMPIcon.cpp
FXBMPImage.cpp
fxbmpio.cpp
FXButton.cpp
FXBZFileStream.cpp
FXCalendar.cpp
FXCalendarView.cpp
FXCanvas.cpp
FXCheckButton.cpp
FXChoiceBox.cpp
FXColorBar.cpp
FXColorDialog.cpp
FXColorList.cpp
FXColorRing.cpp
FXColors.cpp
FXColorSelector.cpp
FXColorWell.cpp
FXColorWheel.cpp
FXComboBox.cpp
FXCompletion.cpp
FXComplexd.cpp
FXComplexf.cpp
FXComposeContext.cpp
FXComposite.cpp
FXCondition.cpp
FXConsole.cpp
FXCP1250Codec.cpp
FXCP1251Codec.cpp
FXCP1252Codec.cpp
FXCP1253Codec.cpp
FXCP1254Codec.cpp
FXCP1255Codec.cpp
FXCP1256Codec.cpp
FXCP1257Codec.cpp
FXCP1258Codec.cpp
FXCP437Codec.cpp
FXCP850Codec.cpp
FXCP852Codec.cpp
FXCP855Codec.cpp
FXCP856Codec.cpp
FXCP857Codec.cpp
FXCP860Codec.cpp
FXCP861Codec.cpp
FXCP862Codec.cpp
FXCP863Codec.cpp
FXCP864Codec.cpp
FXCP865Codec.cpp
FXCP866Codec.cpp
FXCP869Codec.cpp
FXCP874Codec.cpp
fxcpuid.cpp
FXCURCursor.cpp
FXCursor.cpp
FXDataTarget.cpp
FXDate.cpp
FXDC.cpp
FXDCPrint.cpp
FXDCWindow.cpp
FXDDSIcon.cpp
FXDDSImage.cpp
fxddsio.cpp
FXDebugTarget.cpp
FXDelegator.cpp
FXDial.cpp
FXDialogBox.cpp
FXDictionary.cpp
FXDirBox.cpp
FXDir.cpp
FXDirDialog.cpp
FXDirList.cpp
FXDirSelector.cpp
FXDirVisitor.cpp
FXDispatcher.cpp
FXDLL.cpp
FXDockBar.cpp
FXDockHandler.cpp
FXDockSite.cpp
FXDockTitle.cpp
FXDocument.cpp
FXDragCorner.cpp
FXDrawable.cpp
FXDriveBox.cpp
FXException.cpp
FXEXEIcon.cpp
FXEXEImage.cpp
fxexeio.cpp
FXExpression.cpp
FXExtentd.cpp
FXExtentf.cpp
fxezquantize.cpp
FXFileAssociations.cpp
FXFile.cpp
FXFileDialog.cpp
FXFileList.cpp
FXFileSelector.cpp
FXFileStream.cpp
FXFoldingList.cpp
FXFont.cpp
FXFontDialog.cpp
FXFontSelector.cpp
FXFrame.cpp
fxfsquantize.cpp
FXGauge.cpp
fxgetticks.cpp
FXGIFCursor.cpp
FXGIFIcon.cpp
FXGIFImage.cpp
fxgifio.cpp
FXGLCanvas.cpp
FXGLCone.cpp
FXGLContext.cpp
FXGLCube.cpp
FXGLCylinder.cpp
FXGLObject.cpp
FXGLShape.cpp
FXGLSphere.cpp
FXGLTriangleMesh.cpp
FXGLViewer.cpp
FXGLVisual.cpp
FXGradientBar.cpp
FXGroupBox.cpp
FXGZFileStream.cpp
FXhalf.cpp
FXHash.cpp
FXHeader.cpp
FXHorizontalFrame.cpp
FXICOIcon.cpp
FXICOImage.cpp
FXIconCache.cpp
FXIcon.cpp
FXIconList.cpp
FXIconSource.cpp
FXId.cpp
FXIFFIcon.cpp
FXIFFImage.cpp
fxiffio.cpp
FXImage.cpp
FXImageFrame.cpp
FXImageView.cpp
FXInputDialog.cpp
FXIOBuffer.cpp
FXIO.cpp
FXIODevice.cpp
FXJP2Icon.cpp
FXJP2Image.cpp
fxjp2io.cpp
fxjpegio.cpp
FXJPGIcon.cpp
FXJPGImage.cpp
FXJSON.cpp
FXJSONFile.cpp
fxkeyboard.cpp
fxkeysym.cpp
FXKnob.cpp
FXKOI8RCodec.cpp
FXLabel.cpp
FXLFQueue.cpp
FXListBox.cpp
FXList.cpp
FXLocale.cpp
FXMainWindow.cpp
FXMat2d.cpp
FXMat2f.cpp
FXMat3d.cpp
FXMat3f.cpp
FXMat4d.cpp
FXMat4f.cpp
fxmath.cpp
FXMatrix.cpp
FXMDIButton.cpp
FXMDIChild.cpp
FXMDIClient.cpp
FXMemMap.cpp
FXMemoryStream.cpp
FXMenuBar.cpp
FXMenuButton.cpp
FXMenuCaption.cpp
FXMenuCascade.cpp
FXMenuCheck.cpp
FXMenuCommand.cpp
FXMenuPane.cpp
FXMenuRadio.cpp
FXMenuSeparator.cpp
FXMenuTitle.cpp
FXMessageBox.cpp
FXMessageChannel.cpp
FXMetaClass.cpp
FXMutex.cpp
FXObject.cpp
FXObjectList.cpp
FXOptionMenu.cpp
FXPacker.cpp
fxparsegeometry.cpp
FXPath.cpp
FXPCXIcon.cpp
FXPCXImage.cpp
fxpcxio.cpp
FXPicker.cpp
FXPipe.cpp
FXPNGIcon.cpp
FXPNGImage.cpp
fxpngio.cpp
FXPoint.cpp
FXPopup.cpp
FXPPMIcon.cpp
FXPPMImage.cpp
fxppmio.cpp
FXPrintDialog.cpp
fxprintf.cpp
fxpriv.cpp
FXProcess.cpp
FXProgressBar.cpp
FXProgressDialog.cpp
fxpsio.cpp
FXPtrList.cpp
FXPtrQueue.cpp
FXQuatd.cpp
FXQuatf.cpp
FXRadioButton.cpp
FXRandom.cpp
FXRanged.cpp
FXRangef.cpp
FXRangeSlider.cpp
FXRASIcon.cpp
FXRASImage.cpp
fxrasio.cpp
FXReadWriteLock.cpp
FXRealSlider.cpp
FXRealSpinner.cpp
FXRecentFiles.cpp
FXRectangle.cpp
FXRegion.cpp
FXRegistry.cpp
FXReplaceDialog.cpp
FXRex.cpp
FXRGBIcon.cpp
FXRGBImage.cpp
fxrgbio.cpp
FXRootWindow.cpp
FXRuler.cpp
FXRulerView.cpp
fxscanf.cpp
FXScopedThread.cpp
FXScrollArea.cpp
FXScrollBar.cpp
FXScrollPane.cpp
FXScrollWindow.cpp
FXSearchDialog.cpp
FXSemaphore.cpp
FXSemaQueue.cpp
FXSeparator.cpp
FXSettings.cpp
FXShell.cpp
FXShutter.cpp
FXSize.cpp
FXSlider.cpp
FXSocket.cpp
FXSphered.cpp
FXSpheref.cpp
FXSpinLock.cpp
FXSpinner.cpp
FXSplashWindow.cpp
FXSplitter.cpp
FXSpring.cpp
FXStat.cpp
FXStatusBar.cpp
FXStatusLine.cpp
FXStream.cpp
FXString.cpp
FXStringDictionary.cpp
fxstrtod.cpp
fxstrtoll.cpp
fxstrtoull.cpp
FXSwitcher.cpp
FXSystem.cpp
FXTabBar.cpp
FXTabBook.cpp
FXTabItem.cpp
FXTable.cpp
fxtargaio.cpp
FXTaskGroup.cpp
FXTextCodec.cpp
FXText.cpp
FXTextField.cpp
FXTGAIcon.cpp
FXTGAImage.cpp
FXThread.cpp
FXThreadPool.cpp
FXTIFIcon.cpp
FXTIFImage.cpp
fxtifio.cpp
FXToggleButton.cpp
FXToolBar.cpp
FXToolBarGrip.cpp
FXToolBarShell.cpp
FXToolBarTab.cpp
FXToolTip.cpp
FXTopWindow.cpp
FXTranslator.cpp
FXTreeListBox.cpp
FXTreeList.cpp
FXTriStateButton.cpp
FXUndoList.cpp
fxunicode.cpp
FXURL.cpp
FXUTF16Codec.cpp
FXUTF32Codec.cpp
FXUTF8Codec.cpp
fxutils.cpp
FXVariantArray.cpp
FXVariant.cpp
FXVariantMap.cpp
FXVec2d.cpp
FXVec2f.cpp
FXVec3d.cpp
FXVec3f.cpp
FXVec4d.cpp
FXVec4f.cpp
FXVerticalFrame.cpp
FXVisual.cpp
FXWEBPIcon.cpp
FXWEBPImage.cpp
fxwebpio.cpp
FXWindow.cpp
FXWizard.cpp
FXWorker.cpp
FXWSQueue.cpp
fxwuquantize.cpp
FXXBMIcon.cpp
FXXBMImage.cpp
fxxbmio.cpp
FXXML.cpp
FXXMLFile.cpp
FXXPMIcon.cpp
FXXPMImage.cpp
fxxpmio.cpp
icons.cpp)


find_package(PkgConfig)
find_package(Threads)
find_package(X11)
find_package(Freetype)
find_package(OpenGL)

pkg_check_modules(FONTCONFIG fontconfig)

add_library(FOX-1.7 ${SOURCES})
add_library(FOX ALIAS FOX-1.7)



if(FREETYPE_FOUND)
  include_directories(${FREETYPE_INCLUDE_DIRS})
endif()

if(X11_XShm_FOUND)
  add_definitions(-DHAVE_XSHM_H)
endif()

if(X11_Xcursor_FOUND)
  add_definitions(-DHAVE_XCURSOR_H)
  list(APPEND LIBRARIES ${X11_Xcursor_LIB})
endif()

if(X11_Xft_FOUND)
  add_definitions(-DHAVE_XFT_H)
endif()

if(X11_Xft_FOUND AND FREETYPE_FOUND AND FONTCONFIG_FOUND)
  add_definitions(-DHAVE_XFT_H)
  include_directories(${X11_Xft_INCLUDE_PATH})
  list(APPEND LIBRARIES ${X11_Xft_LIB} ${FONTCONFIG_LIBRARIES} ${FREETYPE_LIBRARIES})
endif()

if(X11_Xshape_FOUND)
  add_definitions(-DHAVE_XSHAPE_H)
  list(APPEND LIBRARIES ${X11_Xshape_LIB})
endif()

if(X11_Xrandr_FOUND)
  add_definitions(-DHAVE_XRANDR_H)
  list(APPEND LIBRARIES ${X11_Xrandr_LIB})
endif()




find_file(HAVE_DIRENT_H dirent.h)
if(HAVE_DIRENT_H)
  add_definitions(-DHAVE_DIRENT_H)
endif()

find_file(HAVE_UNISTD_H unistd.h)
if(HAVE_UNISTD_H)
  add_definitions(-DHAVE_UNISTD_H)
endif()

find_file(HAVE_DLFCN_H dlfcn.h)
if(HAVE_DLFCN_H)
  add_definitions(-DHAVE_DLFCN_H)
endif()

find_file(HAVE_SYS_MMAN_H sys/mman.h)
if(HAVE_SYS_MMAN_H)
  add_definitions(-DHAVE_SYS_MMAN_H)
endif()

find_file(HAVE_SYS_WAIT_H sys/wait.h)
if(HAVE_SYS_WAIT_H)
  add_definitions(-DHAVE_SYS_WAIT_H)
endif()

find_file(HAVE_SEMAPHORE_H semaphore.h)
if(HAVE_SEMAPHORE_H)
  add_definitions(-DHAVE_SEMAPHORE_H)
endif()

find_file(HAVE_IMMINTRIN_H immintrin.h)
if(HAVE_IMMINTRIN_H)
  add_definitions(-DHAVE_IMMINTRIN_H)
endif()

find_file(HAVE_SYS_SHM_H sys/shm.h)
if(HAVE_SYS_SHM_H)
  add_definitions(-DHAVE_SYS_SHM_H)
endif()


# Check for JPEG
find_package(JPEG)
if(JPEG_FOUND)
  list(APPEND LIBRARIES ${JPEG_LIBRARIES})
  add_definitions(-DHAVE_JPEG_H)
endif()

# Check for PNG
find_package(PNG)
if(PNG_FOUND)
  list(APPEND LIBRARIES ${PNG_LIBRARIES})
  add_definitions(-DHAVE_PNG_H)
endif()

find_file(HAVE_GLX_H GL/glx.h)
if(OPENGL_FOUND AND OPENGL_GLU_FOUND AND HAVE_GLX_H)
  list(APPEND LIBRARIES ${OPENGL_LIBRARIES})
  add_definitions(-DHAVE_GL_H -DHAVE_GLU_H -DHAVE_GLX_H)
endif()



target_include_directories(FOX-1.7 PUBLIC ../include)
target_link_libraries(FOX-1.7 PRIVATE ${X11_LIBRARIES} ${LIBRARIES}  ${CMAKE_THREAD_LIBS_INIT})







